setting z-index for navbar to ensure it is always ontop

--- a/pageStyle.css
+++ b/pageStyle.css
@@ -14,6 +14,7 @@ body {
     position: sticky;
     top: 0px;
     color: #8a8a8a;
+    z-index: 9999;
     padding: 8px;
 }
 .navbar a {
